- Working on projects.html - Added functions (still in development) - Create, Delete and Update Project - Added + Button - Fixed project.html collapse

--- a/timban-web/src/main/resources/static/css/stylesAntonio.css
+++ b/timban-web/src/main/resources/static/css/stylesAntonio.css
@@ -98,7 +98,25 @@ nav {
     color: rgb(0, 0, 0);
 }
 
+.createButton {
+    display:block;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 1px solid red;
 
+}
+
+.btn-lg {
+    margin-left: 1150px;
+    width: 60px;
+    height: 60px;
+    padding: 12px 0px;
+    border-radius: 30px;
+    text-align: center;
+    font-size: 24px;
+    line-height: 1.42857;
+}
 
 .container {
     max-width: 1000px;
